// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withMods should apply mods correctly 1`] = `
<DocumentFragment>
  <div>
    test
  </div>
</DocumentFragment>
`;

exports[`withMods should apply mods without additional props 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;
